--- a/Assignment3/app/src/main/res/layout/activity_main.xml
+++ b/Assignment3/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,9 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list_businesses"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_gravity="center"
