--- a/Assignment3/app/src/main/res/layout/item_business.xml
+++ b/Assignment3/app/src/main/res/layout/item_business.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
+    android:layout_marginBottom="10dp"
     app:cardCornerRadius="4dp">
 
     <LinearLayout
@@ -27,22 +27,33 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/business_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textColor="#000"
-                android:text="Hello World!" />
+                android:textColor="#000" />
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textColor="#000"
-                android:text="Hello World!" />
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textColor="#000"
-                android:text="Hello World!" />
+                <RatingBar
+                    android:id="@+id/business_rating"
+                    style="@style/Widget.AppCompat.RatingBar.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:theme="@style/YelpRatingBar"/>
+
+                <TextView
+                    android:id="@+id/business_review_count"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="8dp"
+                    android:textColor="#000" />
+
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
