--- a/Assignment3/app/src/main/res/values/colors.xml
+++ b/Assignment3/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#d32323</color>
     <color name="colorPrimaryDark">#d32323</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="silver">#C0C0C0</color>
 </resources>
