--- a/Assignment3/app/src/main/res/values/styles.xml
+++ b/Assignment3/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="YelpRatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/silver</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
+    </style>
+
 </resources>
