--- a/Assignment3/app/src/main/res/values/styles.xml
+++ b/Assignment3/app/src/main/res/values/styles.xml
@@ -13,4 +13,11 @@
         <item name="colorControlActivated">@color/colorPrimary</item>
     </style>
 
+    <style name="viewCustom">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">8dp</item>
+    </style>
+
+
 </resources>
