--- a/Assignment3/app/src/main/res/layout/activity_main.xml
+++ b/Assignment3/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btn_logout"
+            style="@style/viewCustom"
+            android:layout_marginBottom="232dp"
+            android:background="@color/colorAccent"
+            android:text="@string/logout_title"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="match_parent"
@@ -37,6 +46,5 @@
             android:paddingStart="16dp"
             android:paddingEnd="16dp" />
 
-
     </LinearLayout>
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
