--- a/ListIt/app/src/main/res/layout/item_listing.xml
+++ b/ListIt/app/src/main/res/layout/item_listing.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/item_business_photo"
+            android:id="@+id/listing_photo"
             android:contentDescription="@string/app_name"
             android:layout_width="match_parent"
             android:layout_height="135dp"
@@ -33,33 +33,23 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/business_name"
+                    android:id="@+id/listing_name"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textColor="#000"
                     android:textStyle="bold"/>
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/listing_location"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_gravity="center_horizontal">
+                    android:textColor="#000" />
 
-                    <RatingBar
-                        android:id="@+id/business_rating"
-                        style="@style/Widget.AppCompat.RatingBar.Small"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:id="@+id/business_review_count"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="8dp"
-                        android:textColor="#000"
-                        android:visibility="visible" />
-
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/listing_price"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textColor="#000" />
 
             </LinearLayout>
 
