--- a/ListIt/app/src/main/res/layout/activity_main.xml
+++ b/ListIt/app/src/main/res/layout/activity_main.xml
@@ -40,17 +40,17 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginTop="16dp"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:text="Items for sale" />
+            android:text="@string/heading" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:text="Have a look around" />
+            android:text="@string/subheading" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list_listings"
