--- a/ListIt/app/src/main/res/layout/activity_listing_create.xml
+++ b/ListIt/app/src/main/res/layout/activity_listing_create.xml
@@ -24,6 +24,7 @@
             android:text="@string/listing_title" />
 
         <EditText
+            android:id="@+id/title_input"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/title_hint"/>
@@ -35,10 +36,39 @@
             android:text="@string/price_title" />
 
         <EditText
+            android:id="@+id/price_input"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="number"
             android:hint="@string/price_hint" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:text="@string/location_title" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/city_input"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:hint="@string/city_hint"/>
+
+            <Spinner
+                android:id="@+id/state_select"
+                android:layout_width="16dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_marginStart="8dp"
+                android:entries="@array/state_selection"
+                android:spinnerMode="dropdown" />
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/your_image"
@@ -74,6 +104,7 @@
             android:text="@string/description_title" />
 
         <EditText
+            android:id="@+id/description_input"
             android:lines="8"
             android:minLines="6"
             android:gravity="top|start"
