--- a/ListIt/app/src/main/res/layout/activity_main.xml
+++ b/ListIt/app/src/main/res/layout/activity_main.xml
@@ -50,15 +50,13 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:text="@string/subheading" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list_listings"
             android:layout_width="match_parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_gravity="center"
             android:clipToPadding="false"
             android:paddingStart="16dp"
