--- a/ListIt/app/src/main/res/layout/item_listing.xml
+++ b/ListIt/app/src/main/res/layout/item_listing.xml
@@ -18,7 +18,7 @@
             android:contentDescription="@string/app_name"
             android:layout_width="match_parent"
             android:layout_height="135dp"
-            android:background="#000" />
+            android:background="#FFF" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,30 +36,22 @@
                     android:id="@+id/listing_name"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textColor="#000"
+                    android:textColor="#FFF"
                     android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/listing_location"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textColor="#000" />
+                    android:textColor="#FFF" />
 
                 <TextView
                     android:id="@+id/listing_price"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textColor="#000" />
+                    android:textColor="#FFF" />
 
             </LinearLayout>
-
-            <ToggleButton
-                android:id="@+id/favoriteButton"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:layout_weight="2"
-                android:padding="8dp" />
 
         </LinearLayout>
 
